# trap

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  deploy.sh  package.json  pnpm-lock.yaml  setup-env.sh
apps/api/: .dockerignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/api/analytics/: apps.py  tests.py  urls.py  views.py
apps/api/analytics/services/: __init__.py  discounts.py  inventory.py  performance.py  revenue.py  sales.py  summary.py
apps/api/core/: exception_handler.py  health.py  logging_formatter.py  logging_middleware.py  pagination.py  renderers.py  urls.py  wsgi.py
apps/api/core/settings/: __init__.py  base.py  development.py  production.py
apps/api/inventory/: admin.py  apps.py  barcode_utils.py  models.py  serializers.py  services.py  tally_import.py  tests.py  urls.py  views.py  views_debit_credit.py
apps/api/inventory/migrations/: 0001_initial.py  0002_add_barcode_field.py  0003_add_apparel_fields.py  0004_product_master_upgrade.py  0005_sku_sequence.py  (+11 more)
apps/api/invoices/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/api/notifications/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/api/reports/: services.py  tests.py  urls.py  views.py
apps/api/sales/: admin.py  apps.py  models.py  returns.py  returns_serializers.py  returns_views.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/api/users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+242 files in other folders)
